BGAME  editing .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,18 @@
-/composer.phar
-/.idea
-.htaccess
-web.config
-composer.lock
+_config.php
+framework/
+cms/
+/googlesitemaps
+/silverstripe-newsmodule
+/composer.lock
+assets/*
+_ss_environment.php
+tools/phing-metadata
+silverstripe-cache
+.buildpath
+.project
+.settings
+.idea
+.DS_Store
+vendor/
+#/web.config
+#/.htaccess
