--- a/composer.json
+++ b/composer.json
@@ -1,21 +1,24 @@
 {
-	"name": "silverstripe/blizzgame",
+	"name": "rchntrl/blizzgame",
 	"description": "Blizzards fan site cms",
 	"type": "silverstripe-module",
 	"license": "BSD-3-Clause",
 	"keywords": ["silverstripe", "blizzgame", "blizzard-rus"],
     "authors": [
         {
-            "name": "Nurgazy Sarbalaev",
+            "name": "Nurgazy Sarbalaev, Archantyrael",
             "email": "archantyrael@gmail.com"
         }
     ],
 	"require": {
 		"php": ">=5.3.2",
-        "silverstripe/framework": ">=3.0.1,<3.2",
+        "silverstripe/framework": ">=3.0.1,<=3.2",
         "silverstripe/cms": "~3.1",
         "silverstripe/subsites": "1.0.4",
         "firesphere/silverstripe-newsmodule": "5.1",
+		"firesphere/social": "dev-master",
+        "silverstripe/memberprofiles": "dev-master",
+        "rywa/silverstripe-foundation-forms": "dev-master",
         "silverstripe/googlesitemaps": "1.2.2"
 	},
     "config": {
