BGAME Рефакторинг обновил gridField-bulk-editing-tools до версии 2.1.1. Добавил класс BlizzgameObjectExtension

--- a/mysite/_config/config.yml
+++ b/mysite/_config/config.yml
@@ -9,6 +9,9 @@ After:
 # Caution: Indentation through two spaces, not tabs
 SSViewer:
   theme: 'foundation'
+DataObject:
+  extensions:
+    - BlizzgameObjectExtension
 SiteTree:
   extensions:
     - BlizzgamePageExtension
