--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,31 @@
 {
-	"name": "rchntrl/blizzgame",
-	"description": "Blizzards fan site cms",
-	"type": "silverstripe-module",
-	"license": "BSD-3-Clause",
-	"keywords": ["silverstripe", "blizzgame", "blizzard-rus"],
+    "name": "rchntrl/blizzgame",
+    "description": "Blizzards fan site cms",
+    "type": "silverstripe-module",
+    "license": "BSD-3-Clause",
+    "keywords": ["silverstripe", "blizzgame", "blizzard-rus"],
     "authors": [
         {
             "name": "Nurgazy Sarbalaev, Archantyrael",
             "email": "archantyrael@gmail.com"
         }
     ],
-	"require": {
-		"php": ">=5.3.2",
+    "require": {
+        "php": ">=5.3.2",
         "silverstripe/framework": ">=3.0.1,<=3.2",
         "silverstripe/cms": "~3.1",
+        "simonwelsh/trait-loader": "1.0.2",
         "silverstripe/subsites": "1.0.4",
         "silverstripe-australia/gridfieldextensions": "*",
         "colymba/gridField-bulk-editing-tools" : "2.1.1",
         "firesphere/silverstripe-newsmodule": "5.1",
-		"firesphere/social": "dev-master",
-        "silverstripe/memberprofiles": "dev-master",
+        "firesphere/social": "dev-master",
+        "silverstripe-australia/memberprofiles": "dev-master",
         "silverstripe-australia/silverstripe-pagejax": "dev-master",
         "silverstripe/tagfield": "dev-master",
         "silverstripe/googlesitemaps": "1.2.2",
         "rywa/silverstripe-foundation-forms": "dev-master"
-	},
+    },
     "config": {
         "process-timeout": 600
     },
