--- a/mysite/_config/config.yml
+++ b/mysite/_config/config.yml
@@ -9,6 +9,9 @@ After:
 # Caution: Indentation through two spaces, not tabs
 SSViewer:
   theme: 'foundation'
+NewsAdmin:
+  extensions:
+    - SubsiteMenuExtension
 DataObject:
   extensions:
     - BlizzgameObjectExtension
