breadcrumbs fix. ObjectAsPageExtension added

--- a/mysite/_config/config.yml
+++ b/mysite/_config/config.yml
@@ -15,6 +15,15 @@ NewsAdmin:
 DataObject:
   extensions:
     - BlizzgameObjectExtension
+GalleryImage:
+  extensions:
+    - ObjectAsPageExtension
+Book:
+  extensions:
+    - ObjectAsPageExtension
+Chapter:
+  extensions:
+    - ObjectAsPageExtension
 SiteTree:
   extensions:
     - BlizzgamePageExtension
