Изменения по разделу Близз и энциклопедия

--- a/mysite/_config/config.yml
+++ b/mysite/_config/config.yml
@@ -24,6 +24,9 @@ Book:
 Chapter:
   extensions:
     - ObjectAsPageExtension
+PeopleFace:
+  extensions:
+    - ObjectAsPageExtension
 SiteTree:
   extensions:
     - BlizzgamePageExtension
