Изменения по разделу хроники. Баг фиксы в PeopleFace

--- a/mysite/_config/config.yml
+++ b/mysite/_config/config.yml
@@ -27,6 +27,9 @@ Chapter:
 PeopleFace:
   extensions:
     - ObjectAsPageExtension
+ChronicleItem:
+  extensions:
+    - ObjectAsPageExtension
 SiteTree:
   extensions:
     - BlizzgamePageExtension
