прикручиваю бнет авторизацию

--- a/mysite/_config/config.yml
+++ b/mysite/_config/config.yml
@@ -12,6 +12,9 @@ SSViewer:
 NewsAdmin:
   extensions:
     - SubsiteMenuExtension
+Member:
+  extensions:
+    - BnetMemberExtension
 DataObject:
   extensions:
     - BlizzgameObjectExtension
