--- a/composer.json
+++ b/composer.json
@@ -10,25 +10,33 @@
             "email": "archantyrael@gmail.com"
         }
     ],
+    "require-dev": {
+        "facebook/php-sdk-v4": "4.0.15"
+    },
     "require": {
         "php": ">=5.3.2",
         "silverstripe/framework": ">=3.0.1,<=3.2",
         "silverstripe/cms": "~3.1",
-        "simonwelsh/trait-loader": "1.0.2",
         "silverstripe/subsites": "1.0.4",
         "silverstripe-australia/gridfieldextensions": "*",
         "colymba/gridField-bulk-editing-tools" : "2.1.1",
         "firesphere/silverstripe-newsmodule": "5.1",
         "firesphere/social": "dev-master",
-        "betterbrief/silverstripe-opauth": "dev-master",
+        "wilr/silverstripe-facebookconnect": "dev-master",
         "silverstripe-australia/memberprofiles": "dev-master",
         "silverstripe-australia/silverstripe-pagejax": "dev-master",
         "silverstripe/tagfield": "dev-master",
         "silverstripe/googlesitemaps": "1.2.2",
         "rywa/silverstripe-foundation-forms": "dev-master"
     },
+    "extra": {
+        "installer-paths": {
+            "/blizzgame/facebookconnect/{$name}/": ["facebook/php-sdk-v4"]
+        }
+    },
     "config": {
         "process-timeout": 600
     },
     "minimum-stability": "dev"
+
 }
