--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         }
     ],
     "require-dev": {
+        "2nova/vk-php-sdk": "dev-master",
         "facebook/php-sdk-v4": "4.0.15"
     },
     "require": {
@@ -21,6 +22,7 @@
         "silverstripe-australia/gridfieldextensions": "*",
         "colymba/gridField-bulk-editing-tools" : "2.1.1",
         "firesphere/silverstripe-newsmodule": "5.1",
+        "silverstripe/forum": "0.7.*@dev",
         "firesphere/social": "dev-master",
         "wilr/silverstripe-facebookconnect": "dev-master",
         "silverstripe-australia/memberprofiles": "dev-master",
