--- a/mysite/_config/config.yml
+++ b/mysite/_config/config.yml
@@ -30,6 +30,9 @@ PeopleFace:
 ChronicleItem:
   extensions:
     - ObjectAsPageExtension
+Media:
+  extensions:
+    - ObjectAsPageExtension
 ForumThread:
   extensions:
     - ObjectAsPageExtension
