работы по домашней странице и новостям

--- a/mysite/_config/config.yml
+++ b/mysite/_config/config.yml
@@ -12,6 +12,9 @@ SSViewer:
 NewsAdmin:
   extensions:
     - SubsiteMenuExtension
+News:
+  extensions:
+    - BlizzgameNewsExtension
 DataObject:
   extensions:
     - BlizzgameObjectExtension
