--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "silverstripe/subsites": "1.0.4",
         "silverstripe-australia/gridfieldextensions": "*",
         "colymba/gridField-bulk-editing-tools" : "2.1.1",
-        "firesphere/silverstripe-newsmodule": "5.1",
+        "firesphere/silverstripe-newsmodule": "dev-master",
         "silverstripe/forum": "0.7.*@dev",
         "firesphere/social": "dev-master",
         "wilr/silverstripe-facebookconnect": "dev-master",
