--- a/mysite/_config/config.yml
+++ b/mysite/_config/config.yml
@@ -13,6 +13,7 @@ NewsAdmin:
   extensions:
     - SubsiteMenuExtension
 News:
+  default_sort: "\"PublishFrom\" DESC, \"ID\" DESC"
   extensions:
     - BlizzgameNewsExtension
 DataObject:
