при сохранениии less компилируется в ccs файл. less подгружается и компилируется js'ом только в режиме Stage. Добавил поле Актер для PeopleFace. и права.

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         }
     ],
     "require-dev": {
+        "leafo/lessphp": "0.5.0",
         "facebook/php-sdk-v4": "4.0.15"
     },
     "require": {
