рефакторинг всех объектов. сделал галерею на angular.js, пока доступно только админам.

--- a/mysite/_config/config.yml
+++ b/mysite/_config/config.yml
@@ -9,6 +9,7 @@ After:
 # Caution: Indentation through two spaces, not tabs
 SSViewer:
   theme: 'foundation'
+  rewrite_hash_links: false
 NewsAdmin:
   extensions:
     - SubsiteMenuExtension
