--- a/composer.json
+++ b/composer.json
@@ -16,18 +16,16 @@
     },
     "require": {
         "php": ">=5.3.2",
-        "silverstripe/framework": ">=3.0.1,<=3.2",
+        "silverstripe/framework": ">=3.1",
         "silverstripe/cms": "~3.1",
-        "silverstripe/subsites": "1.0.4",
+        "silverstripe/subsites": "1.2.*@dev",
         "silverstripe-australia/gridfieldextensions": "*",
         "colymba/gridField-bulk-editing-tools" : "2.1.1",
         "firesphere/silverstripe-newsmodule": "dev-master",
         "silverstripe/forum": "0.8.*@dev",
-        "firesphere/social": "dev-master",
         "wilr/silverstripe-facebookconnect": "dev-master",
         "rchntrl/silverstripe-vk-connect": "dev-master",
-        "silverstripe-australia/silverstripe-pagejax": "dev-master",
-        "silverstripe/tagfield": "dev-master",
+        "meerware/browser-information": "dev-master",
         "silverstripe/googlesitemaps": "1.2.2",
         "silverstripe/widgets": "dev-master",
         "rywa/silverstripe-foundation-forms": "dev-master"
