--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
     },
     "require": {
         "php": ">=5.3.2",
-        "silverstripe/framework": ">=3.0",
+        "silverstripe/framework": ">=3.0.1,<=3.2",
         "silverstripe/cms": "~3.1",
-        "silverstripe/subsites": "1.2.*@dev",
+        "silverstripe/subsites": "1.0.7",
         "silverstripe-australia/gridfieldextensions": "*",
         "colymba/gridField-bulk-editing-tools" : "2.1.1",
         "firesphere/silverstripe-newsmodule": "dev-master",
