Рефакторинг. добавил модули restfulserver и pickerfield. объект представляющий карту тсг и хартстон расширил дополнительными полями.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 .idea
 framework/
-reports/
-siteconfig/
+pickerfield/
 browser-information/
 cms/
+restfulserver/
 /subsites
 /googlesitemaps
 /gridfieldextensions
