--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,12 @@
         "php": ">=5.3.2",
         "silverstripe/framework": ">=3.0.1,<=3.2",
         "silverstripe/cms": "~3.1",
+        "silverstripe/restfulserver": "1.0.2",
         "silverstripe/subsites": "1.0.7",
         "silverstripe-australia/gridfieldextensions": "*",
         "colymba/gridField-bulk-editing-tools" : "2.1.1",
         "firesphere/silverstripe-newsmodule": "dev-master",
-        "sheadawson/silverstripe-linkable": "dev-master",
+        "briceburg/silverstripe-pickerfield": "dev-master",
         "silverstripe/forum": "0.8.*@dev",
         "wilr/silverstripe-facebookconnect": "dev-master",
         "rchntrl/silverstripe-vk-connect": "dev-master",
