--- a/mysite/_config/config.yml
+++ b/mysite/_config/config.yml
@@ -56,6 +56,8 @@ Media:
 SiteTree:
   extensions:
     - BlizzgamePageExtension
+Page:
+  api_access: true
 SiteConfig:
   extensions:
     - BlizzgameConfigExtension
