--- a/assets/.htaccess
+++ b/assets/.htaccess
@@ -35,3 +35,8 @@ AddHandler default-handler php phtml php3 php4 php5 inc
 	# Turn the PHP engine off
 	php_flag engine off
 </IfModule>
+
+RewriteEngine on
+RewriteCond %{HTTP_REFERER} !^$
+RewriteCond %{HTTP_REFERER} !^http(s)?://(www\.)?blizzgame\.ru/.*$ [NC]
+RewriteRule .*\.(jpg|jpeg|png|gif)$ - [F,NC,L]
