--- a/mysite/_config/config.yml
+++ b/mysite/_config/config.yml
@@ -33,6 +33,8 @@ GalleryImage:
     - ObjectAsPageExtension
 CardGameItem:
   api_access: true
+  extensions:
+    - ObjectAsPageExtension
 Book:
   api_access: true
   extensions:
