cards убрал пока ангулярку в галерее. Сделал так, чтобы некоторые методы объектов отобразились в виде полей со значениями.

--- a/mysite/_config/config.yml
+++ b/mysite/_config/config.yml
@@ -28,11 +28,11 @@ ElementLink:
 StormHero:
   api_access: true
 GalleryImage:
-  api_access: true
+  #api_access: true
   extensions:
     - ObjectAsPageExtension
 CardGameItem:
-  api_access: true
+  #api_access: true
   extensions:
     - ObjectAsPageExtension
 Book:
