--- a/mysite/_config/config.yml
+++ b/mysite/_config/config.yml
@@ -9,7 +9,7 @@ After:
 # Caution: Indentation through two spaces, not tabs
 SSViewer:
   theme: 'foundation'
-  rewrite_hash_links: false
+  #rewrite_hash_links: false
 NewsAdmin:
   extensions:
     - SubsiteMenuExtension
