HOTS добавил новый модуль unclecheese/betterbuttons.

--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "rchntrl/silverstripe-vk-connect": "dev-master",
         "meerware/browser-information": "dev-master",
         "silverstripe/googlesitemaps": "1.2.2",
+        "unclecheese/betterbuttons": "dev-master",
         "rywa/silverstripe-foundation-forms": "dev-master"
     },
     "config": {
