HOTS  добавил контроллер BlizzgameApi унаследованный от RestfulServer, чтоб можно было иметь доступ к объекту по его урл, а не только Id. Немного верстки страничек героев нексуса.

--- a/mysite/_config/routes.yml
+++ b/mysite/_config/routes.yml
@@ -2,3 +2,4 @@ Director:
   rules:
     'style//$Action/$ID/$OtherID': 'LessController'
     'download//$Action/$ID/$OtherID': 'DownloadFile'
+    'api/blizz': 'BlizzgameAPI'
